@@ -42,6 +42,7 @@ import Parser,Lexer;
     import org.apache.cassandra.auth.*;
     import org.apache.cassandra.auth.permission.*;
     import org.apache.cassandra.config.ColumnDefinition;
+    import org.apache.cassandra.config.DatabaseDescriptor;
     import org.apache.cassandra.cql3.*;
     import org.apache.cassandra.cql3.restrictions.CustomIndexExpression;
     import org.apache.cassandra.cql3.statements.*;
@@ -137,4 +138,8 @@ import Parser,Lexer;
 
 query returns [ParsedStatement stmnt]
     : st=cqlStatement (';')* EOF { $stmnt = st; }
+    ;
+
+resource returns [IResource res]
+    : c=cassandraResource { $res = $c.res; }
     ;
